feat: Align supplier and supply order flows with use case specs
- Fix exception messages for Create/Edit Suppliers and Create/Track
  Supply Order to match spec wording exactly (missing fields, duplicate
  name, invalid transition, final-state, DB connection errors)
- Wrap supplier/supply-order service methods in try/catch so DB
  connection failures return the correct error message instead of a
  generic one
- Add duplicate-name check on supplier update (existsByNameAndIdNot)
- Remove Bean Validation annotations that were pre-empting the
  correctly worded manual checks in SupplyOrderServiceImpl
- Reorder Create Supply Order validation to match spec flow (check
  items before delivery date)
- Add Supply Order management UI: list page, create form, and
  status-tracking detail modal, wired into ManagerPortal and nav